Use .isEmpty()
Closes #12480

Signed-off-by: Anton Klaren <anton.klaren@neotechnology.com>