@@ -71,7 +71,7 @@ class MethodSignatureCompiler
             Name parameter = param.getAnnotation( Name.class );
             String name = parameter.value();
 
-            if ( name.trim().isEmpty() )
+            if ( name.isBlank() )
             {
                 throw new ProcedureException( Status.Procedure.ProcedureRegistrationFailed,
                         "Argument at position %d in method `%s` is annotated with a name,%n" +
